examples/test/testpolicy16918.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16918
  namespace: namespace293
spec:
  podSelector:
    matchLabels:
      key21: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value33
          key49: value49
      podSelector:
        matchLabels:
          key34: value14
          key15: value15
